--- a/docs/Visual Editor Final Report/ve_final_report.tex
+++ b/docs/Visual Editor Final Report/ve_final_report.tex
@@ -108,6 +108,21 @@ In the end some of the more valuable things I learned were how to write code as 
 
 \subsection{Different Approach}
 	If I were to start this project over again, I would probably create my own framework, rather than use KineticJS or something else similar to it. Creating our own framework would enable us to manipulate objects and variables in a way which was efficient and could be used in a way to how we could optimize it. Often I felt as though I was spending a majority of the time figuring out how to make the KineticJS work, figuring out correct syntax rather than being able to go through my code and edit and implement new features. That being said, having the KineticJS framework probably did save us an enormous amount of time, rather than discovering halfway through the project that our own implementation was not going to work. As far as continuing work using the existing code we have, I think method encapsulation would be the next step, as well automatic end bracket creation. However, with how we are implementing it, I think requiring the user to add end brackets is a very relatable aspect of coding, and will teach the user how to code better. That being said, implementing a "compile" function, letting the user know they forgot something syntactically would also be useful.
+	
+	\section{Reflection: Steve Marx}
+	\subsection{Challenges}
+	Two different types of challenges were encountered in the project: technical and organizational.  The most obvious hurdle from a technical perspective was the need for the entire team to learn multiple new languages/tools quickly, concurrent with the start of a complex project.  New technologies included Javascript and the various frameworks (JQuery, KineticJS, etc.) that could provide functionality to the Visual Editor module, Git collaboration and HTML, among others.  Some of the Javascript libraries would work better for particular aspects of the module, but selection was difficult due to the team's collective inexperience with them.  The technical challenges were overcome through excellent determination, self-education and trial and error by VE team members.  My most important technical take-aways are Git use and general Javascript knowledge.
+	Although Edith is obviously a technical project, organizational challenges seemed to be even more important than technical challenges.  It was a good simulation of projects outside of the classroom, in which a person or team is given a task and a completion date and left to accomplish the goal in a mostly self-directed way.  However, in some ways it was more challenging.  For example, in a company, individuals, teams, and the entire project would have clearly defined roles and management/leadership relationships (as well as likely having more experience with the technical aspects).  Projects need managers and technical contributors and some who can fill both roles.  At some point in the project, the class started to see the need for more defined roles and coordination among groups, and assigned a designated contact person for each team.  That was just one example of a positive adaptation, and I am sure that if today the class were given another project based on the same languages, it would be done much more effectively.  You can only learn through experience, and I definitely have a better idea of how large software projects work in large groups, and how I could improve my performance.
+	                
+	       
+	
+	\subsection{Applied Software Engineering}
+	Software engineering techniques were applied both formally and informally.  The most helpful formal use was the creation of the Requirements Specification, including the functional requirements, use cases, UML and non-functional requirements.  Although the project still required some changes to teams' understanding of their roles, this document forced the team to be specific about its objectives and served as a guide to development.  In general, Visual Editor development was done through an iterative prototyping methodology in which several team members developed different ways to structure the module.  Of course, there was duplication of efforts in the early stages, but ultimately the method produced a common platform for everyone to work from.  Testing methodologies, including static analysis software, was also helpful.  
+	        
+	
+	\subsection{Different Approach}
+	It is easy to look back and come to the conclusion that you could have done things differently, but is it a useful exercise?  I think it is.  In my last corporate position, all company divisions were transitioning to a new way of financial reporting.  Each quarter, the managers of each division gathered for a "post-mortem" to review what went wrong (and right) with the project that quarter.  It was a great chance to share issues with upper management and learn from the successes and challenges of other groups, too.  On the Edith project, I would have devoted much more energy in the beginning to ensuring that teams understood their roles in every respect - generally; specifically; the interactions with other modules and teams, etc.  In the early weeks, it would have been helpful to spend days at the chalkboard with the whole class present, diagramming out exactly who was doing what - sketches of module appearances, and clear discussion of where one team's module would end and the next team's would begin (including discussion of what would need to be passed from team to team).  Confusion over these issues hindered our progress nearly throughout the project and resulted in new roles and confusion essentially through completion.  There were many discussions of roles, but they were in the form of conversations between individuals (while many assumptions were made by all the groups - "I think Team X is doing that") and communication was not formalized and widely distributed. If we were to continue developing the Visual Editor module, we would have some more time to focus on the user's learning experience.  For example, help boxes and coding tips (e.g., how to use if statements) would be provided for the user.  In addition, blocks could be shaped to fit together in logical (allowed) ways for programming, similar to the blocks of Scratch.  
+	        
 
 
 \end{document}
