pushes last version of story creator final report

--- a/docs/StoryFinalReport/StoryFinalReport.tex
+++ b/docs/StoryFinalReport/StoryFinalReport.tex
@@ -4,6 +4,7 @@
 
 \documentclass[12pt]{article}
 \usepackage{graphicx}
+\usepackage{hyperref}
 
 \begin{document}
 
@@ -27,24 +28,24 @@
 % PROJECT SUMMARY
 %-------------------------------------------------------------------------------------------------------------
 \section{Project Summary}
-Edith is an online program that allows the user to create objects and program animations to move them.  This allows the user to gain an understanding between how objects interact with functions in programming.  The Story Creator module combines the Sharing Framework, Object Creator, Visual Editor and Animation modules in order to create a holistic view of Edith in a dynamic webpage. \\
+Edith is an online program that allows the user to create objects and program animations to move them. This allows the user to gain an understanding between how objects interact with functions in programming. The Story Creator module combines the Sharing Framework, Object Creator, Visual Editor and Animation modules in order to create a holistic view of Edith in a dynamic webpage. \\
 
-The story creator (user) will be directed to a login page that will prompt them for their username and password.  If they do not have an account they may create one in the link that says "Create Account."  In the case that they have already have an account they will be directed to the main Edith page where they will be able to create a "story." To do this they can click on the button that says "Make Object."  This will redirect them to a new page that allows them to create new objects with the ability to free draw, create circles, and create squares.  After the user finishes creating objects they will export the object and enter the name that they wish to use for the object.  The user can then navigate back to the main page and click the load button.  After entering the name of the object that was exported the object that they created will appear on the bottom canvas.  Then the user may double click on objects (this adds the objects to the canvas and allows the user to animate them).  The user can also single click on objects (this makes them glow and puts them into an array for Visual Editor), showing that these are the specific objects on the canvas that will move.  The story creator can then give the objects animations by manipulating the functions in the Visual Editor canvas. By doing this, students will be able to learn how relationships among objects work in programming. \\
+The story creator (user) will be directed to a login page that will prompt them for their username and password. If they do not have an account they may create one in the link that says "Create Account."  In the case that they have already have an account they will be directed to the main Edith page where they will be able to create a "story." To do this they can click on the button that says "Make Object." This will redirect them to a new page that allows them to create new objects with the ability to free draw, create circles, and create squares. After the user finishes creating objects they will export the object and enter the name that they wish to use for the object. The user can then navigate back to the main page and click the load button. After entering the name of the object that was exported, the object that they created will appear on the bottom canvas. Then the user may double click on objects (this adds the objects to the canvas and allows the user to animate them). The user can also single click objects. This makes the objects glow and means that they are currently selected for programming in the visual editor and for animating on the canvas. The Story Creator can then give the objects animations by manipulating the functions in the Visual Editor canvas. The Visual Editor canvas has several coding blocks which correspond to built-in methods for animation (e.g. jump, rotate), logic choices like \texttt{if} and \texttt{else}, and program flow functionality like functions. By doing this, students will be able to learn how relationships among objects work in object-oriented programming. \\
 
-The Story Creator Module designed the Edith main page, login page, and sign up page.  A large portion of time spent by the Story Creator module went into the creation of the three major canvas' on the page that were for the Animation, Object, and Visual Editor Modules.  These were created and formatted correctly for what each team needed.  The Visual Editor and Object Creator module implement a Kinetic canvas while the Animation team utilize an OCanvas.  The canvas for Objects was directly implemented in order for objects saved to the Sharing Framework to be displayed in the canvas.  The Story Creator module also added the functionality of clicking on the objects to make them glow and put them into an array for the Visual Editor module to implement.   
+The Story Creator Module designed the Edith main page, login page, and sign up page. A large portion of time spent by the Story Creator module went into the creation of the three major canvas' on the page that were for the Animation, Object, and Visual Editor Modules.  These were created and formatted correctly for what each team needed. The Visual Editor and Object Creator module implement a Kinetic canvas while the Animation team utilize an OCanvas. The canvas for Objects was directly implemented in order for objects saved to the Sharing Framework to be displayed in the canvas. The Story Creator module also added the functionality of clicking on the objects to make them glow and put them into an array for the Visual Editor module to implement.   
 
 
 %-------------------------------------------------------------------------------------------------------------
 % DEVELOPMENT PROCEDURES
 %-------------------------------------------------------------------------------------------------------------
 \section{Development Procedures}
-In order to complete Edith the Story Creator module followed the iterative, extreme programming, and the Boehm spiral model.  We initially used the Boehm spiral model by determining our objectives, identifying risks, testing, and planning our next cycle.  We found quickly that this was not the most applicable model because of the amount of changing requirements, which forced us to throw away old code.  It transformed into an iterative model because we discovered that we had to repeatedly redo our entire module due to changing requirements and specifications from other groups and the project as a whole.  
+In order to complete Edith the Story Creator module followed the iterative, extreme programming, and the Boehm spiral model.  We initially used the Boehm spiral model by determining our objectives, identifying risks, testing, and planning our next cycle.  We found quickly that this was not the most applicable model because of the amount of changing requirements, which forced us to throw away old code.  In order to use the Boehm spiral model we considered what it would take to complete our module and have all of the modules working together.  We also attempted to minimize risk by determining how much we needed to integrate the teams early on.  The Boehm spiral model helped to determine how much detail needed to be implemented in order to group modules together.  It transformed into an iterative model because we discovered that we had to repeatedly redo our entire module due to changing requirements and specifications from other groups and the project as a whole.  
 \begin{itemize}
 
 
 \item We began implementing the functionality of receiving JSON objects, adding a time to them, and passing them on to other groups. 
 
-\item We also added the functionality to set a time to wait for a function (this was later transferred to Animation)inside the code which allowed the user to specify how long a function should wait before executing. 
+\item We also added the functionality to set a time to wait for a function (this was later transferred to Animation) inside the code which allowed the user to specify how long a function should wait before executing. 
 
 \item Later our requirements changed completely and we began creating the base webpage view for the entire project. 
 
@@ -60,9 +61,11 @@ In order to complete Edith the Story Creator module followed the iterative, extr
 
 \end{itemize}
 
-Our process was inefficient because we created working software that was never used or even thrown away.  We mostly implemented console log testing and used JSHint.  The JSHint was used later in our process when implementing the glow function as well as adding images to the object canvas.  Our program works because the main page displays all canvases as well as allowing the other modules to function correctly on them.  The object panel at the bottom of the screen also displays the objects correctly.  Console log testing was effective for showing us how the page interprets the information that we were displaying.  JSHint was effective at showing us syntax errors in our code.  At times console log testing was ineffective at pointing out why our code was not functioning.  We logged information gathered from the user that was then placed in the \texttt{addSprite} function to set the original location of the sprite.  The sprite would not display even though our console logs determined that the number received from the user were correct.  We determined on our own that the input from the user was not turned into an integer but rather a String that would not work correctly in the \texttt{addSprite} function.  \\
-
 Because of how collaborative our process model was, we also made frequent use of pair programming. We did the majority of programming together as a group, and while individuals often wrote sections of code, we would each look at each others code either as it was being written or immediately after. This helped both to catch bugs and to ensure that everybody understood the entire code base. \\
+
+Our process was inefficient because we created working software that was never used or even thrown away.  The requirements for the Story Creator module changed frequently because the modules that were supported by Story Creator changed how they implemented certain aspects of their project.  The changes that were needed by the other modules would no longer function with the previous code that the Story Creator module implemented and ended up being thrown out.  We mostly implemented console log testing and used JSHint.  The JSHint was used later in our process when implementing the glow function as well as adding images to the object canvas.  Our program works because the main page displays all canvases as well as allowing the other modules to function correctly on them.  The object panel at the bottom of the screen also displays the objects correctly.  Console log testing was effective for showing us how the page interprets the information that we were displaying.  JSHint was effective at showing us syntax errors in our code.  At times console log testing was ineffective at pointing out why our code was not functioning.  We logged information gathered from the user that was then placed in the \texttt{addSprite} function to set the original location of the sprite.  The sprite would not display even though our console logs determined that the number received from the user were correct.  We determined on our own that the input from the user was not turned into an integer but rather a String that would not work correctly in the \texttt{addSprite} function.  We originally console logged the variables input by the user which displayed the correct number.  We then used hard coded values to make sure that the \texttt{addSprite} function worked correctly with integers.  We attempted to code in hard coded numbers for the variables used in the function and log those (they displayed correctly as well).  After this step we worked to find out if there was an issue with the variables changing when put them into the function (console log before and after we used the function).  We then just came up with the idea that the parameters needed for the function were not correct.  We fixed the issue by turning the variables used in the function into integers right before we called it.  \\
+
+
 
 We did both formal testing and informal testing throughout the process of putting together the project. Formal testing involved static analysis and unit tests designed by another group. These helped resolve bugs, but our project specifications changed drastically after testing, so we employed frequent informal testing as an adjunct. This formal testing involved printing and manually interrogating the state of all data structures we produced. Because story creator passes data to multiple teams, ensuring that data structures such as the array that holds highlighted objects are working correctly is imperative. We typically investigated the state of these data structures with multiple conditions (often looking closely at boundary conditions like zero items, several items, one items) to ensure that they worked correctly. However, since the majority of our work involved designing the central website, the vast majority of testing involved simply viewing the website to make sure that it displayed properly. There is no direct way to test, for example, whether object images fail to load except through manual investigation. We frequently examined our interface carefully and by hand to ensure it displayed well, looked to the browser debug console for hidden (or sometimes clear) errors, and tested the website in several browsers and configurations (relatively simple because we all use different browser configurations) to ensure that the implementation was robust. \\
 
@@ -87,15 +90,15 @@ Before, DJ worked on small fixes to the program itself.  Not much has actually c
 \begin{itemize}
 \item "Navigate Story Files" - The storyteller will have the ability to start a new story file, save a story, and close a story.\
 
-\textit{This is a helpful requirement because it allows the entire story to be able to function.  This enables the storyteller to begin their story and come back to it later.  We were not able to complete the "close a story" option.  The current story is set as a project and is loaded from the sharing framework.  The option to close a story was not completely necessary in the end because the user still has the option to make a new story and begin it.}
+\textit{This is a valuable requirement because it allows the entire story to be able to function, but it is possible that it could have been broken into multiple components like "new story," "save a story," and "close a story."  This requirement enables the storyteller to begin their story and come back to it later.  We were not able to complete the "close a story" option.  The current story is set as a project and is loaded from the sharing framework.  The option to close a story was not completely necessary in the end because the user still has the option to make a new story and begin it. If we had broken this into three components, we could have considered the feasability or necessity of each part in isolation.}
 
 \item "Start a new story file" - The storyteller will select an option to create a new story.\
 
 \textit{The option to start a new story is not available.  This requirement was not defined well because the "starting a new story file" does not specify if the old one is saved or if there is an option to use pieces from the previous story.}
 
-\item "Save a story" - The storyteller selects the option to save the story.  A representation of the story and its objects, scripts, and settings is sent to the Sharing Framework.\\
+\item "Save a story" - The storyteller selects the option to save the story.  A representation of the story and its objects, scripts, and settings is sent to the Sharing Framework.\
 
-\textit{This was a very helpful requirement because it allows a previous story to be loaded onto the screen after being saved.  It was very effective because it was a great way for AJAX to be used in order to retrieve necessary information from the database.}
+\textit{This was a very useful requirement because it allows a previous story to be loaded onto the screen after being saved, which is a helpful feature for users who want to continue projects.  It was very effective because it was a great way for AJAX to be used in order to retrieve necessary information from the database.}
 
 \item "Close a story" -  The user selects an option to close the story.  The story is removed from the story editor and animations, scripts, and objects associated with the story are cleared from their respective editors.\
 
@@ -107,7 +110,7 @@ Before, DJ worked on small fixes to the program itself.  Not much has actually c
 
 \item "Remove an object" - selects an option to delete objects. User selects the object to delete. The object disappears from the scene.\
 
-\textit{ This function is not present in the final implementation. It was originally intended to be used with the previous functional requirement so that if an object was dragged onto the animation canvas it could be removed from the canvas. Since objects are no longer dragged onto the canvas, there is no need for a remove feature. This functional requirement would have been useful had we kept the old implementation, but it is no longer necessary. If we had broken up the previous functional requirement into two functional requirements, we might have been able to decrease the ambiguity surrounding what it means to "remove" an object. We do not need a feature to remove objects from the animation canvas, but removing objects from the object browser might have been a nice feature. If we had decoupled the previous requirement into create an object and add an object to scene, we might have thought to have added functional requirements for remove object and remove object from scene. "Remove object" may have been a nice feature for the final implementation.}
+\textit{This function is not present in the final implementation. It was originally intended to be used with the previous functional requirement so that if an object was dragged onto the animation canvas it could be removed from the canvas. Since objects are no longer dragged onto the canvas, there is no need for a remove feature. This functional requirement would have been useful had we kept the old implementation, but it is no longer necessary. If we had broken up the previous functional requirement into two functional requirements, we might have been able to decrease the ambiguity surrounding what it means to "remove" an object. We do not need a feature to remove objects from the animation canvas, but removing objects from the object browser might have been a nice feature. If we had decoupled the previous requirement into create an object and add an object to scene, we might have thought to have added functional requirements for remove object and remove object from scene. "Remove object" may have been a nice feature for the final implementation.}
 
 \item "Move an object" - User selects an option to move objects. User drags the object from its original location to a new one. (This is not an animation)\ 
 
@@ -130,7 +133,6 @@ Before, DJ worked on small fixes to the program itself.  Not much has actually c
 \textit{This requirement changed over time due to changes in the interaction with and responsibilities of the Visual Editor module. Animation was achieved by having standard functions that apply to all objects that take the target object as a parameter. The Storyteller can highlight multiple objects for a function in the visual editor to act upon.}
 
 \item "Play story" - Storyteller selects a "play scene" option. The story plays for the storyteller in the animation viewer at the beginning.\
-%Can we play a story yet?%
 
 \item "Share a story" - User selects a "publish story option." The story is converted to a representation that the sharing framework can read. The story representation is sent to the sharing framework so that it can share the scene.\
 
@@ -138,12 +140,14 @@ Before, DJ worked on small fixes to the program itself.  Not much has actually c
 
 \end{itemize}
 
+
 \subsection{Non-Functional Requirements}
 
 \begin{itemize}
 
-\item "Ease of Use" - 	The number of errors made by experienced users may differ significantly from those made by first-time or novice user. An experienced user should make no more than 3-5 errors per hour. While there is some complexity to the story editor, an experienced user should not have trouble knowing which options to choose to add objects or play the scene.
-\ We never performed any studies to quantify the number of errors made when using Edith, although this could be future work for the project. Judging from anecdotal evidence, it appeared that the system was relatively easy to use (with some instruction from the various teams) during integration demos. Since most of the teams were using parts of Edith designed relatively recently, they could be considered "novice users." Their general ability to learn and use the system readily suggests that Edith is relatively simple for novices to learn. In the sense that this nonfunctional requirement is specific, it is a useful requirement, but in the sense that testing it involves procedures that we never did, it may have been too difficult a requirement to adhere to effectively.
+\item "Ease of Use" - The number of errors made by experienced users may differ significantly from those made by first-time or novice user. An experienced user should make no more than 3-5 errors per hour. While there is some complexity to the story editor, an experienced user should not have trouble knowing which options to choose to add objects or play the scene. \\
+
+\textit{We never performed any studies to quantify the number of errors made when using Edith, although this could be future work for the project. Judging from anecdotal evidence, it appeared that the system was relatively easy to use (with some instruction from the various teams) during integration demos. Since most of the teams were using parts of Edith designed relatively recently, they could be considered "novice users." Their general ability to learn and use the system readily suggests that Edith is relatively simple for novices to learn. In the sense that this nonfunctional requirement is specific, it is a useful requirement, but in the sense that testing it involves procedures that we never did, it may have been too difficult a requirement to adhere to effectively.}
 
 \end{itemize}
 %-------------------------------------------------------------------------------------------------------------
@@ -183,7 +187,9 @@ The next part of the page is an embedded JavaScript. The script first handles pa
 
 The next part of the script consists of three functions: \\
 
-1) The function \texttt{popitupObjc(url)} creates a new window when given the url for a page. This is used to open the object creation page in a new window. Next is the variable declaration, \texttt{projectCode}, an array which stores the JSON representation of the currently open project (or an empty array if no project is open/if a project fails to open). 2) The function \texttt{loadProject()} makes an AJAX get request to Sharing Framework's file \texttt{load.php} to get the project JSON associated with an id. Upon a successful get request, the function obtains the variable \texttt{unstring}, a JSON representation of the project, which is parsed into an array using \texttt{JSON.parse}. The function then loops over this array to add each object to the object browser. 3) Lastly, the function \texttt{save()} saves the project asynchronously to the server. It prompts the user for a project name and then performs an AJAX post request to the server with the parameter \texttt{projectName} tied to the name it prompted the user for and the parameter \texttt{code} tied to the JSON code for the entire project made in the visual editor. \\
+1) The function \texttt{popitupObjc(url)} creates a new window when given the url for a page. This is used to open the object creation page in a new window. Next is the variable declaration, \texttt{projectCode}, an array which stores the JSON representation of the currently open project (or an empty array if no project is open/if a project fails to open). \\
+\indent 2) The function \texttt{loadProject()} makes an AJAX get request to Sharing Framework's file \texttt{load.php} to get the project JSON associated with an id. Upon a successful get request, the function obtains the variable \texttt{unstring}, a JSON representation of the project, which is parsed into an array using \texttt{JSON.parse}. The function then loops over this array to add each object to the object browser. \\
+\indent 3) Lastly, the function \texttt{save()} saves the project asynchronously to the server. It prompts the user for a project name and then performs an AJAX post request to the server with the parameter \texttt{projectName} tied to the name it prompted the user for and the parameter \texttt{code} tied to the JSON code for the entire project made in the visual editor. \\
 
 The bottom of the page has several buttons, which are linked to these functions. There is also a play button that is linked to the animation team's main method. \\
 
@@ -277,8 +283,10 @@ Like some of my other teammate's view, if I were to redo this, I would have larg
 
 \begin{itemize}
 \item Script:  A small program made in the visual editor that controls the object or scene event to be displayed.
-\item KineticJS:  An HTML5 Canvas JavaScript framework that enables high performance animations, transitions, node nesting, layering, filtering, caching, event handling for desktop and mobile applications.
-\item OCanvas:  A jQuery- and Flash-Style Library for HTML5 Canvas.  Instead of working with pixels, you work with objects.
+\item KineticJS:  An HTML5 Canvas JavaScript framework that enables high performance animations, transitions, node nesting, layering, filtering, caching, event handling for desktop and mobile applications. \\
+\url{http://kineticjs.com}
+\item OCanvas:  A jQuery- and Flash-Style Library for HTML5 Canvas.  Instead of working with pixels, you work with objects. \\
+\url{http://ocanvas.org}
 \end{itemize}
 
 \end{document}
